[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-anything-v2"
version = "0.1.0"
description = "Depth Anything V2 - Monocular depth estimation"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["depth_anything_v2*"]
